--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -89,7 +89,7 @@
          <Divider></Divider>
          <div class="row">
              <div class="col-2">
-                 <label>@L["GroupBuyName"]</label>
+                 <label>@L["GroupBuyName"] <span class="text-danger"> *</span></label>
             </div>
             <div class="col-9">
                 <TextEdit MaxLength="@maxtextCount" @bind-Text="@CreateGroupBuyDto.GroupBuyName" />
@@ -372,6 +372,7 @@
             <div class="col-2"></div>
             <div class="col-2">
                 @L["ShippingMethod"]
+                 <span class="text-danger"> *</span>
             </div>
             <div class="col-8">
             @if(CreateGroupBuyDto.AllowShipToOuterTaiwan && !CreateGroupBuyDto.AllowShipOversea)
@@ -547,7 +548,7 @@
 
         <div class="row">
             <div class="col-2">@L["Gateway"]</div>
-            <div class="col-2">@L["PaymentMethod"]</div>
+            <div class="col-2">@L["PaymentMethod"] <span class="text-danger"> *</span></div>
             <div class="col-4">
                
                   @*   <input type="radio" class="form-check-input" name="PaymentGateway" id="payment-gateway-1" checked="@CreateGroupBuyDto.IsDefaultPaymentGateWay" @onclick="() => CreateGroupBuyDto.IsDefaultPaymentGateWay = true" />
