--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -65,7 +65,7 @@
                 <div class="col-1"></div>
                 <div class="col-2">
                     <label>@L["ShortCode"]
-                        <span class="text-danger"> *</span>
+                        <span class="text-danger"> </span>
                     </label>
                 </div>
                 <div class="col-7">
