--- a/src/Kooco.Pikachu.Blazor/Pages/ReturnAndExchangeOrders/ReturnAndExchangeOrder.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ReturnAndExchangeOrders/ReturnAndExchangeOrder.razor
@@ -78,13 +78,17 @@
                             else
                             {
 
-                                <Select Disabled TValue="OrderReturnStatus" Class="form-select form-select-sm"
+                                <Select  TValue="OrderReturnStatus" Class="form-select form-select-sm"
                                         SelectedValue="@context.ReturnStatus"
                                         SelectedValueChanged="@(e => ReturnStatusChanged(e, context))">
                                     <SelectItem></SelectItem>
+
                                     @foreach (var enumValue in Enum.GetValues(typeof(OrderReturnStatus)))
                                     {
+                                        @if(enumValue.ToString()=="Processing"||enumValue.ToString()=="Succeeded")
+                                        {
                                         <SelectItem Value="@enumValue">@L[enumValue.ToString()]</SelectItem>
+                                        }
                                     }
                                 </Select>
 
