--- a/src/Kooco.Pikachu.Blazor/Pages/CashFlowReconciliationStatements/CashFlowReconciliationStatement.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/CashFlowReconciliationStatements/CashFlowReconciliationStatement.razor
@@ -97,7 +97,15 @@
                     <DataGridColumn Field="@nameof(OrderDto.CustomerEmail)" Caption="@L["Email"]" /> *@
                     <DataGridColumn Field="@nameof(OrderDto.IssueStatus)" Caption="@L["InvoiceIssueStatus"]">
                         <DisplayTemplate>
+                            @if(context.IssueStatus.ToString() == "Succeeded")
+                            {
+                                var str = context.IssueStatus.ToString() + " cash flow";
+                                @L[str];
+
+                            }
+                            else{
                             @L[context.IssueStatus.ToString()]
+                            }
                         </DisplayTemplate>
                     </DataGridColumn>
                     
