--- a/src/Kooco.Pikachu.Blazor/Pages/VoidInvoices/VoidInvoice.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/VoidInvoices/VoidInvoice.razor
@@ -70,7 +70,17 @@
                     <DataGridColumn Field="@nameof(OrderDto.CustomerEmail)" Caption="@L["Email"]" /> *@
                     <DataGridColumn Field="@nameof(OrderDto.IssueStatus)" Caption="@L["InvoiceStatus"]">
                         <DisplayTemplate>
-                            @L[context.IssueStatus.ToString()]
+                            @if (context.IssueStatus.ToString() == "Succeeded")
+                            {
+                                var str = context.IssueStatus.ToString() + " void invoice";
+                                @L[str]
+                                ;
+
+                            }
+                            else
+                            {
+                                @L[context.IssueStatus.ToString()]
+                            }
                         </DisplayTemplate>
                     </DataGridColumn>
                     
